option('introspection', type : 'feature', value : 'auto',
       description : 'Generate gobject-introspection bindings')
option('doc', type : 'feature', value : 'auto',
       description: 'Enable documentation.')
option('system-lua', type : 'boolean', value : 'false',
       description : 'Use lua from the system instead of the bundled one')
